- fix news block height on mobile

--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -17,10 +17,7 @@ html {
 }
 
 body, html {
-  //overflow: hidden;
-  .off-canvas-content, main{
-    overflow: hidden;
-  }
+  scroll-behavior: smooth;
 }
 
 #container-scroll{
