--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,10 +1,3 @@
-.home {
-  #trigger-header, #trigger-news, #trigger-games, #trigger-work, #trigger-careers, footer {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-    overflow: hidden;
-  }
-}
 
 
 
